[package]
name = "ctnctl-rs"
description = "A CLI to apply firewall rules to docker container based on eBPF cgroups"
repository = "https://github.com/ZhengjunHUO/ctnctl-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
exclude = ["docs/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
crossbeam-channel = "0.5.8"
ctrlc = "3.3.1"
docker-api = "0.12.2"
libbpf-rs = { git = "https://github.com/ZhengjunHUO/libbpf-rs.git", branch = "allow-lookup-inside-queue" }
libc = "0.2.142"
tokio = "1.28.1"

[build-dependencies]
libbpf-cargo = { version = "0.20.1", optional = true }
